k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netflix-clone
  labels:
    name: netflix-clone
    app: netflix-clone
