k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone-service
  namespace: netflix-clone
  labels:
    app: netflix-clone
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: netflix-clone
